[PW-37] Update twitter:card

--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,7 @@
   <!-- <meta property="og:image" content=""> -->
 
   <!-- Twitter -->
-  <meta property="twitter:card" content="summary_large_image">
+  <meta property="twitter:card" content="summary">
   <meta property="twitter:url" content="https://callumwright.com/">
   <meta property="twitter:title" content="Callum Wright">
   <meta property="twitter:description" content="View the work of Callum Wright through an interactive portfolio.">
