[PW-119] Remove trailing forwardslash

--- a/public/index.html
+++ b/public/index.html
@@ -19,14 +19,14 @@
 
   <!-- Open Graph / Facebook -->
   <meta property="og:type" content="website">
-  <meta property="og:url" content="https://callumwright.com/">
+  <meta property="og:url" content="https://callumwright.com">
   <meta property="og:title" content="Callum Wright">
   <meta property="og:description" content="View the work of Callum Wright through an interactive portfolio.">
   <!-- <meta property="og:image" content=""> -->
 
   <!-- Twitter -->
   <meta property="twitter:card" content="summary">
-  <meta property="twitter:url" content="https://callumwright.com/">
+  <meta property="twitter:url" content="https://callumwright.com">
   <meta property="twitter:title" content="Callum Wright">
   <meta property="twitter:description" content="View the work of Callum Wright through an interactive portfolio.">
   <!-- <meta property="twitter:image" content=""> -->
